--- a/AMS/Views/Shared/_Layout.cshtml
+++ b/AMS/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
   <link href="~/vendors/bootstrap-table/dist/bootstrap-table.min.css" rel="stylesheet" />
   <link href="~/vendors/bootstrap-table/dist/extensions/filter-control/bootstrap-table-filter-control.min.css" rel="stylesheet" />
-
+  <link href="~/vendors/BsMultiSelect/dist/css/BsMultiSelect.min.css" rel="stylesheet" />
   <environment include="Development">
     <!-- Template styles -->
     <link href="~/css/style.css" rel="stylesheet">
@@ -144,6 +144,7 @@
     <script src="~/vendors/bootstrap-table/dist/extensions/export/bootstrap-table-export.min.js"></script>
     
     <script src="~/lib/jquery.repeater/jquery.repeater.min.js"></script>
+    <script src="~/vendors/BsMultiSelect/dist/js/BsMultiSelect.min.js"></script>
     <environment include="Development">
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
