--- a/AMS/Views/Tickets/_Tasks.cshtml
+++ b/AMS/Views/Tickets/_Tasks.cshtml
@@ -29,7 +29,7 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Summary)
+                            <a asp-controller="TodoTasks" asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Summary)</a>
                         </td>
 
                         <td>
