Add Cron Schedule to Ticket Job

--- a/AMS/Views/Shared/_Layout.cshtml
+++ b/AMS/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
   <script src="~/vendors/fullcalendar-4.4.0/packages/bootstrap/main.min.js"></script>
   <script src="~/vendors/fullcalendar-4.4.0/examples/js/theme-chooser.js"></script>
   
+  <link href="~/vendors/jqcron/src/jqCron.css" rel="stylesheet" />
 
   <link href="~/lib/leaflet/leaflet.css" rel="stylesheet" />
   <script src="~/lib/leaflet/leaflet.js"></script>
@@ -138,6 +139,9 @@
     <script src="~/lib/pace-progress/pace.min.js"></script>
     <script src="~/lib/perfect-scrollbar/dist/perfect-scrollbar.min.js"></script>
     <script src="~/lib/@@coreui/coreui/dist/js/coreui.min.js"></script>
+
+    <script src="~/vendors/jqcron/src/jqCron.js"></script>
+    <script src="~/vendors/jqcron/src/jqCron.en.js"></script>
 
     <script src="~/vendors/bootstrap-table/dist/bootstrap-table.min.js"></script>
     <script src="~/vendors/bootstrap-table/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
