--- a/AMS/Views/Home/Floors.cshtml
+++ b/AMS/Views/Home/Floors.cshtml
@@ -227,7 +227,7 @@
                 </header>
                 <div class="mall">
                     <div class="surroundings">
-                        <img class="surroundings__map" src="img/surroundings.svg" alt="Surroundings" />
+                        <img class="surroundings__map" src="~/floor/img/surroundings.svg" alt="Surroundings" />
                     </div>
                     <div class="levels">
                         <div class="level level--1" aria-label="Level 1">
