--- a/AMS/Views/ItemTypes/Index.cshtml
+++ b/AMS/Views/ItemTypes/Index.cshtml
@@ -20,7 +20,13 @@
                 <i class="fa fa-align-justify"></i> Item Types
             </div>
             <div class="card-body">
-
+                <div class="mb-1">
+                    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-item-type" data-url="@Url.Action("Add")">
+                        Add Item Type
+                    </button>
+                    <!-- Modal placeholder -->
+                    <div id="modal-placeholder"></div>
+                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
@@ -54,7 +60,7 @@
                         }
                     </tbody>
                 </table>
-                
+
             </div>
         </div>
     </div>
@@ -63,6 +69,7 @@
 
 @* view-modals *@
 @section Modals {
+   
 }
 
 @* view-scripts *@
@@ -70,6 +77,8 @@
     <script>
         $(function () {
             var $table = $("#table").bootstrapTable();
+
+
         });
     </script>
 }
