--- a/AMS/Views/ItemTypes/Index.cshtml
+++ b/AMS/Views/ItemTypes/Index.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="card-body">
                 <div class="mb-1">
-                    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-item-type" data-url="@Url.Action("Add")">
+                    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-modal" data-url="@Url.Action("Add")">
                         Add Item Type
                     </button>
                     <!-- Modal placeholder -->
@@ -77,8 +77,6 @@
     <script>
         $(function () {
             var $table = $("#table").bootstrapTable();
-
-
         });
     </script>
 }
