--- a/AMS/Views/Shared/_Layout.cshtml
+++ b/AMS/Views/Shared/_Layout.cshtml
@@ -146,9 +146,10 @@
     <script src="~/vendors/bootstrap-table/dist/bootstrap-table.min.js"></script>
     <script src="~/vendors/bootstrap-table/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
     <script src="~/vendors/bootstrap-table/dist/extensions/export/bootstrap-table-export.min.js"></script>
-    
+
     <script src="~/lib/jquery.repeater/jquery.repeater.min.js"></script>
     <script src="~/vendors/BsMultiSelect/dist/js/BsMultiSelect.min.js"></script>
+    <script src="~/js/the-repeater.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <!-- VIEW-SCRIPTS -->
