--- a/AMS/Views/LocationTypes/Index.cshtml
+++ b/AMS/Views/LocationTypes/Index.cshtml
@@ -20,7 +20,13 @@
                 <i class="fa fa-align-justify"></i> Location Types
             </div>
             <div class="card-body">
-
+                <div class="mb-1">
+                    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-modal" data-url="@Url.Action("Add")">
+                        Add Location Type
+                    </button>
+                    <!-- Modal placeholder -->
+                    <div id="modal-placeholder"></div>
+                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
