--- a/AMS/Views/MetaFields/Index.cshtml
+++ b/AMS/Views/MetaFields/Index.cshtml
@@ -20,7 +20,13 @@
                 <i class="fa fa-align-justify"></i> Meta Fields
             </div>
             <div class="card-body">
-
+                <div class="mb-1">
+                    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-modal" data-url="@Url.Action("Add")">
+                        Add Meta Field
+                    </button>
+                    <!-- Modal placeholder -->
+                    <div id="modal-placeholder"></div>
+                </div>
                 <table id="table"
                        data-search="true"
                        data-pagination="true"
@@ -30,41 +36,43 @@
                        class="table">
                     <thead>
                         <tr>
+                            <th data-field="name" data-sortable="true" data-filter-control="input">
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
                             <th data-field="fieldType" data-sortable="true" data-filter-control="select">
                                 @Html.DisplayNameFor(model => model.FieldType)
                             </th>
                             <th data-field="customList" data-sortable="true" data-filter-control="select">
                                 @Html.DisplayNameFor(model => model.CustomList)
                             </th>
-                            <th data-field="name" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Name)
-                            </th>
+
                             <th data-field="actions"></th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.FieldType)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CustomList.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
-                                    <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.FieldType)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CustomList.Name)
+                            </td>
+
+                            <td>
+                                <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
+                                <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
+                                <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
-                
+
             </div>
         </div>
     </div>
