Add Client Modal

--- a/AMS/Views/ClientTypes/Index.cshtml
+++ b/AMS/Views/ClientTypes/Index.cshtml
@@ -71,6 +71,7 @@
 
 @* view-scripts *@
 @section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script>
         $(function () {
             var $table = $("#table").bootstrapTable();
