--- a/AMS/Views/ItemTypes/Index.cshtml
+++ b/AMS/Views/ItemTypes/Index.cshtml
@@ -69,11 +69,12 @@
 
 @* view-modals *@
 @section Modals {
-   
+
 }
 
 @* view-scripts *@
 @section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script>
         $(function () {
             var $table = $("#table").bootstrapTable();
