--- a/AMS/Views/Clients/Index.cshtml
+++ b/AMS/Views/Clients/Index.cshtml
@@ -20,46 +20,54 @@
                 <i class="fa fa-align-justify"></i> Clients
             </div>
             <div class="card-body">
-
-                <table  id="table" 
-                        data-search="true"
-                        data-pagination="true"
-                        data-show-export="true"
-                        data-filter-control="true"
-                        data-show-search-clear-button="true"
-                        class="table">
+                <div class="mb-1">
+                    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-modal" data-url="@Url.Action("Add")">
+                        Add Client
+                    </button>
+                    <!-- Modal placeholder -->
+                    <div id="modal-placeholder"></div>
+                </div>
+                <table id="table"
+                       data-search="true"
+                       data-pagination="true"
+                       data-show-export="true"
+                       data-filter-control="true"
+                       data-show-search-clear-button="true"
+                       class="table">
                     <thead>
                         <tr>
-                            <th data-field="clientType" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.ClientType)
-                            </th>
                             <th data-field="name" data-sortable="true" data-filter-control="input">
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
+                            <th data-field="clientType" data-sortable="true" data-filter-control="select">
+                                @Html.DisplayNameFor(model => model.ClientTypeId)
+                            </th>
+
                             <th data-field="actions"></th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ClientType.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
-                                    <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClientType.Name)
+                            </td>
 
-                                </td>
-                            </tr>
+                            <td>
+                                <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
+                                <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
+                                <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
-                
+
             </div>
         </div>
     </div>
@@ -72,6 +80,7 @@
 
 @* view-scripts *@
 @section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script>
         $(function () {
             var $table = $("#table").bootstrapTable();
