--- a/AMS/Views/CustomLists/Index.cshtml
+++ b/AMS/Views/CustomLists/Index.cshtml
@@ -72,6 +72,7 @@
 
 @* view-scripts *@
 @section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script>
         $(function () {
             var $table = $("#table").bootstrapTable();
