--- a/AMS/Views/AssetCustodians/Index.cshtml
+++ b/AMS/Views/AssetCustodians/Index.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="card-body">
                 <div class="mb-1">
-                    <a asp-action="Create" class="btn btn-primary">
+                    <a asp-action="Create" asp-route-assetId="@ViewBag.FilterAssetId" class="btn btn-primary">
                         Add Asset Custodian
                     </a>
                 </div>
