--- a/AMS/Views/AssetItems/Index.cshtml
+++ b/AMS/Views/AssetItems/Index.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="card-body">
                 <div class="mb-1">
-                    <a asp-action="Create" class="btn btn-primary">
+                    <a asp-action="Create" asp-route-assetId="@ViewBag.FilterAssetId" asp-route-itemTypeId="@ViewBag.FilterItemTypeId" class="btn btn-primary">
                         Add Asset Item
                     </a>
                 </div>
