--- a/AMS/Views/CustomListItems/Index.cshtml
+++ b/AMS/Views/CustomListItems/Index.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="card-body">
                 <div class="mb-1">
-                    <a asp-action="Create" class="btn btn-primary">
+                    <a asp-action="Create" asp-route-listId="@ViewBag.FilterListId" class="btn btn-primary">
                         Add List Item
                     </a>
                 </div>
