--- a/AMS/Views/Assets/Details.cshtml
+++ b/AMS/Views/Assets/Details.cshtml
@@ -3,56 +3,57 @@
 @{
     ViewData["Title"] = Model.Name;
     ViewData["Action"] = "Details";
+    ViewData["FilterAssetId"] = Model.Id;
 
 }
 
 @inject AMS.Services.IUserService userService
-    <div class="row">
-        <div class="col-md-3 col-sm-6">
-            <div class="card">
-                <div class="card-body p-0 d-flex align-items-center">
-                    <i class="fa fa-cubes bg-info p-4 font-2xl mr-3"></i>
-                    <div>
-                        <div class="text-value-sm text-info">@Model.Childs.Count</div>
-                        <div class="text-muted text-uppercase font-weight-bold small">Total Sub Assets</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="card">
-                <div class="card-body p-0 d-flex align-items-center">
-                    <i class="fa fa-tags bg-info p-4 font-2xl mr-3"></i>
-                    <div>
-                        <div class="text-value-sm text-info">@Model.Items.Count</div>
-                        <div class="text-muted text-uppercase font-weight-bold small">Items</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="card">
-                <div class="card-body p-0 d-flex align-items-center">
-                    <i class="fa fa-exclamation-circle bg-info p-4 font-2xl mr-3"></i>
-                    <div>
-                        <div class="text-value-sm text-info">@Model.ActiveTickets?.Count()</div>
-                        <div class="text-muted text-uppercase font-weight-bold small">Active Tickets</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div class="card">
-                <div class="card-body p-0 d-flex align-items-center">
-                    <i class="fa fa-exclamation-circle bg-warning p-4 font-2xl mr-3"></i>
-                    <div>
-                        <div class="text-value-sm text-info">@Model.ActiveTickets?.Count(x => x.IsOverdue)</div>
-                        <div class="text-muted text-uppercase font-weight-bold small">Overdue Tickets</div>
-                    </div>
+<div class="row">
+    <div class="col-md-3 col-sm-6">
+        <div class="card">
+            <div class="card-body p-0 d-flex align-items-center">
+                <i class="fa fa-cubes bg-info p-4 font-2xl mr-3"></i>
+                <div>
+                    <div class="text-value-sm text-info">@Model.Childs.Count</div>
+                    <div class="text-muted text-uppercase font-weight-bold small">Total Sub Assets</div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="col-md-3 col-sm-6">
+        <div class="card">
+            <div class="card-body p-0 d-flex align-items-center">
+                <i class="fa fa-tags bg-info p-4 font-2xl mr-3"></i>
+                <div>
+                    <div class="text-value-sm text-info">@Model.Items.Count</div>
+                    <div class="text-muted text-uppercase font-weight-bold small">Items</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 col-sm-6">
+        <div class="card">
+            <div class="card-body p-0 d-flex align-items-center">
+                <i class="fa fa-exclamation-circle bg-info p-4 font-2xl mr-3"></i>
+                <div>
+                    <div class="text-value-sm text-info">@Model.ActiveTickets?.Count()</div>
+                    <div class="text-muted text-uppercase font-weight-bold small">Active Tickets</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 col-sm-6">
+        <div class="card">
+            <div class="card-body p-0 d-flex align-items-center">
+                <i class="fa fa-exclamation-circle bg-warning p-4 font-2xl mr-3"></i>
+                <div>
+                    <div class="text-value-sm text-info">@Model.ActiveTickets?.Count(x => x.IsOverdue)</div>
+                    <div class="text-muted text-uppercase font-weight-bold small">Overdue Tickets</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-12">
         <div class="form-horizontal">
@@ -137,7 +138,8 @@
     </div>
 </div>
 
-
+<!-- Modal placeholder -->
+<div id="modal-placeholder"></div>
 
 @* view-scripts *@
 @section Scripts {
