--- a/AMS/Views/Assets/_Custodians.cshtml
+++ b/AMS/Views/Assets/_Custodians.cshtml
@@ -5,7 +5,12 @@
             <i class="fa fa-align-justify"></i> Custodians
         </div>
         <div class="card-body">
-
+            <div class="mb-1">
+                <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#add-custodian-modal" data-url="@Url.Action("AddCustodian", "AssetCustodians", new { assetId = ViewBag.FilterAssetId })">
+                    Add Custodian
+                </button>
+                
+            </div>
             <table id="table"
                    data-search="true"
                    data-pagination="true"
