--- a/AMS/Views/TicketTypes/Index.cshtml
+++ b/AMS/Views/TicketTypes/Index.cshtml
@@ -63,6 +63,7 @@
                                     @Html.DisplayFor(modelItem => item.DefaultDuration)
                                 </td>
                                 <td>
+                                    <a class="btn-sm text-white btn-info mx-1" asp-controller="Tickets" asp-action="Index" asp-route-ticketTypeId="@item.Id"><i class="fa fa-exclamation-circle mx-1"></i>Tickets</a>
                                     <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
                                     <a class="btn-sm btn-info mx-1" asp-controller="MetaFieldValues" asp-action="Index" asp-route-assetId="@item.Id">Meta</a>
                                     <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
