--- a/AMS/Views/UserGroups/Index.cshtml
+++ b/AMS/Views/UserGroups/Index.cshtml
@@ -51,6 +51,7 @@
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td>
+                                    <a class="btn-sm text-white btn-info mx-1" asp-controller="Tickets" asp-action="Index" asp-route-userGroupId="@item.Id"><i class="fa fa-exclamation-circle mx-1"></i>Tickets</a>
                                     <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
                                     <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
                                     <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
