Add Fields to Index views for assets and tickets

--- a/AMS/Views/Tickets/Index.cshtml
+++ b/AMS/Views/Tickets/Index.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Tickets";
+
+    TicketType ticketType = ViewData["FilterTicketType"] as TicketType;
 }
 
 @* view-styles *@
@@ -25,49 +27,137 @@
                         Add Ticket
                     </a>
                 </div>
-                <table id="table"
-                       data-search="true"
-                       data-pagination="true"
-                       data-show-export="true"
-                       data-filter-control="true"
-                       data-show-search-clear-button="true"
-                       class="table">
-                    <thead>
-                        <tr>
-                            <th data-field="code" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Code)
-                            </th>
+                @if (ticketType == null)
+                {
+                    <table id="table"
+                           data-search="true"
+                           data-pagination="true"
+                           data-show-export="true"
+                           data-filter-control="true"
+                           data-show-search-clear-button="true"
+                           class="table">
+                        <thead>
+                            <tr>
+                                <th data-field="code" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.Code)
+                                </th>
 
-                            <th data-field="summary" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Summary)
-                            </th>
+                                <th data-field="summary" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.Summary)
+                                </th>
 
-                            <th data-field="status" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.Status)
-                            </th>
+                                <th data-field="status" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Status)
+                                </th>
 
-                            <th data-field="dueDate" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.DueDate)
-                            </th>
+                                <th data-field="dueDate" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.DueDate)
+                                </th>
 
-                            <th data-field="client" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.Client)
-                            </th>
-                            <th data-field="ticketType" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.TicketTypeId)
-                            </th>
-                            <th data-field="location" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.Location)
-                            </th>
+                                <th data-field="client" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Client)
+                                </th>
+                                <th data-field="ticketType" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.TicketTypeId)
+                                </th>
+                                <th data-field="location" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Location)
+                                </th>
 
 
 
-                            <th data-field="actions"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
+                                <th data-field="actions"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Code)</a>
+                                    </td>
+
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Summary)
+                                    </td>
+
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Status)
+                                    </td>
+
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.DueDate)
+                                    </td>
+
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Client.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.TicketType.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Location.Name)
+                                    </td>
+
+                                    <td>
+
+                                        <a class="btn-sm text-white btn-info mx-1" asp-controller="TodoTasks" asp-action="Index" asp-route-ticketId="@item.Id"><i class="fa fa-tasks mx-1"></i>Tasks</a>
+                                        <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
+                                        <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
+                                        <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                }
+                else
+                {
+                    <table id="table"
+                           data-search="true"
+                           data-pagination="true"
+                           data-show-export="true"
+                           data-filter-control="true"
+                           data-show-search-clear-button="true"
+                           class="table">
+                        <thead>
+                            <tr>
+                                <th data-field="code" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.Code)
+                                </th>
+
+                                <th data-field="summary" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.Summary)
+                                </th>
+
+                                <th data-field="status" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Status)
+                                </th>
+
+                                <th data-field="dueDate" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.DueDate)
+                                </th>
+
+                                <th data-field="client" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Client)
+                                </th>
+                                <th data-field="location" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Location)
+                                </th>
+
+                                @foreach (var col in ticketType.FieldValues)
+                                {
+                                    <th data-field="@col.Key" data-sortable="true" data-filter-control="input">
+                                        @col.Value.Field.Name
+                                    </th>
+                                }
+
+                                <th data-field="actions"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
                             <tr>
                                 <td>
                                     <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Code)</a>
@@ -89,23 +179,31 @@
                                     @Html.DisplayFor(modelItem => item.Client.Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.TicketType.Name)
-                                </td>
-                                <td>
                                     @Html.DisplayFor(modelItem => item.Location.Name)
                                 </td>
-
+                                @foreach (var col in ticketType.FieldValues)
+                                {
+                                    if (item.FieldValues.ContainsKey(col.Key))
+                                    {
+                                        <td>@item.FieldValues[col.Key].Value</td>
+                                    }
+                                    else
+                                    {
+                                        <td></td>
+                                    }
+                                }
                                 <td>
 
-                                    <a class="btn-sm text-white btn-info mx-1" asp-controller="TodoTasks" asp-action="Index" asp-route-ticketId="@item.Id"><i class="fa fa-tasks mx-1"></i>Tasks</a>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
-                                    <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                                    <a class="btn-sm text-white btn-info btn-block mb-1" asp-controller="TodoTasks" asp-action="Index" asp-route-ticketId="@item.Id"><i class="fa fa-tasks mx-1"></i>Tasks</a>
+                                    <a class="btn-sm btn-secondary btn-block mb-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
+                                    <a class="btn-sm btn-secondary btn-block mb-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
+                                    <a class="btn-sm btn-danger btn-block mb-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
                                 </td>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                            }
+                        </tbody>
+                    </table>
+                }
 
             </div>
         </div>
