--- a/AMS/Views/Assets/Index.cshtml
+++ b/AMS/Views/Assets/Index.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Assets";
+
+    AssetType assetType = ViewData["FilterAssetType"] as AssetType;
 }
 
 
@@ -26,75 +28,149 @@
                         Add Asset
                     </a>
                 </div>
-                <table id="table"
-                       data-search="true"
-                       data-pagination="true"
-                       data-show-export="true"
-                       data-filter-control="true"
-                       data-show-search-clear-button="true"
-                       class="table">
-                    <thead>
-                        <tr>
-                            <th data-field="name" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Name)
-                            </th>
-                            <th data-field="code" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Code)
-                            </th>
-                            <th data-field="client" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.Client)
-                            </th>
-                            <th data-field="assetType" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.AssetType)
-                            </th>
-                            <th data-field="location" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.Location)
-                            </th>
-                            <th data-field="parent" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Parent)
-                            </th>
-                            <th data-field="isOn" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.IsOn)
-                            </th>
-                            <th data-field="actions"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
+                @if (assetType == null)
+                {
+                    <table id="table"
+                           data-search="true"
+                           data-pagination="true"
+                           data-show-export="true"
+                           data-filter-control="true"
+                           data-show-search-clear-button="true"
+                           class="table">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    <a class="btn-link" asp-action="Details" asp-route-id="@item.Id">@item.Code</a>
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Client.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.AssetType.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Location.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Parent.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.IsOn)
-                                </td>
-                                <td>
-                                    <a class="btn-sm text-white btn-info mx-1" asp-controller="AssetItems" asp-action="Index" asp-route-assetId="@item.Id"><i class="fa fa-list mx-1"></i>Items</a>
-                                    <a class="btn-sm text-white btn-info mx-1" asp-controller="AssetCustodians" asp-action="Index" asp-route-assetId="@item.Id"><i class="icon-user mx-1"></i>Custodians</a>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
-                                    <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
-                                </td>
+                                <th data-field="name" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.Name)
+                                </th>
+                                <th data-field="code" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.Code)
+                                </th>
+                                <th data-field="client" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Client)
+                                </th>
+                                <th data-field="assetType" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.AssetType)
+                                </th>
+                                <th data-field="location" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Location)
+                                </th>
+                                <th data-field="parent" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.Parent)
+                                </th>
+                                <th data-field="isOn" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.IsOn)
+                                </th>
+                                <th data-field="actions"></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        <a class="btn-link" asp-action="Details" asp-route-id="@item.Id">@item.Code</a>
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Client.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.AssetType.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Location.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Parent.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.IsOn)
+                                    </td>
+                                    <td>
+                                        <a class="btn-sm text-white btn-info mx-1" asp-controller="AssetItems" asp-action="Index" asp-route-assetId="@item.Id"><i class="fa fa-list mx-1"></i>Items</a>
+                                        <a class="btn-sm text-white btn-info mx-1" asp-controller="AssetCustodians" asp-action="Index" asp-route-assetId="@item.Id"><i class="icon-user mx-1"></i>Custodians</a>
+                                        <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
+                                        <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
+                                        <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                }
+                else
+                {
+                    <table id="table"
+                           data-search="true"
+                           data-pagination="true"
+                           data-show-export="true"
+                           data-filter-control="true"
+                           data-show-search-clear-button="true"
+                           class="table">
+                        <thead>
+                            <tr>
+                                <th data-field="name" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.Name)
+                                </th>
+                                <th data-field="code" data-sortable="true" data-filter-control="input">
+                                    @Html.DisplayNameFor(model => model.Code)
+                                </th>
+                                <th data-field="client" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Client)
+                                </th>
+                                <th data-field="location" data-sortable="true" data-filter-control="select">
+                                    @Html.DisplayNameFor(model => model.Location)
+                                </th>
+                                @foreach (var col in assetType.FieldValues)
+                                {
+                                    <th data-field="@col.Key" data-sortable="true" data-filter-control="input">
+                                        @col.Value.Field.Name
+                                    </th>
+                                }
+                                <th data-field="actions"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        <a class="btn-link" asp-action="Details" asp-route-id="@item.Id">@item.Code</a>
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Client.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Location.Name)
+                                    </td>
+                                    @foreach (var col in assetType.FieldValues)
+                                    {
+                                        if (item.FieldValues.ContainsKey(col.Key))
+                                        {
+                                            <td>@item.FieldValues[col.Key].Value</td>
+                                        }
+                                        else
+                                        {
+                                            <td></td>
+                                        }
+                                    }
+                                    <td>
+                                        <a class="btn-sm text-white btn-info btn-block mb-1" asp-controller="AssetItems" asp-action="Index" asp-route-assetId="@item.Id"><i class="fa fa-list mx-1"></i>Items</a>
+                                        <a class="btn-sm text-white btn-info btn-block mb-1" asp-controller="AssetCustodians" asp-action="Index" asp-route-assetId="@item.Id"><i class="icon-user mx-1"></i>Custodians</a>
+                                        <a class="btn-sm btn-secondary btn-block mb-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
+                                        <a class="btn-sm btn-secondary btn-block mb-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
+                                        <a class="btn-sm btn-danger btn-block mb-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                }
 
             </div>
         </div>
