Add Users Pages

--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -241,6 +241,14 @@
                     </li>
                 </ul>
             </li>
+
+            <li class="divider"></li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="" asp-controller="Users" asp-action="Index">
+                    <i class="nav-icon fa fa-users"></i> Users
+                </a>
+            </li>
+
             <li class="divider"></li>
             <li class="nav-item">
                 <a class="nav-link" asp-area="" asp-controller="TicketJobs" asp-action="Index">
